--- a/HB/ht.html
+++ b/HB/ht.html
@@ -26,13 +26,13 @@
 <div id="card-inside">
 <div class="wrap wishesFont">
     <center>
-      <p>Wishing you a very Happy Birthday Tanay! May god bless you.</p>
-      <p> You might be wondering, who is this girl who had sent me this virtual card! Let me take a moment to introduce myself. I am a techie just like you! I am one of the regular readers of your posts you add on LinkedIn or twitter. 
-        <p> Though, i never got a chance to meet you in person. But because of GS India Summit 2019. I know you! Being an emminent part of GS I was last year an organiser in the same event. You are my prime source of motivation to do good in tech. Thankyou 😊😊
+      <p>Wishing you a very Happy Birthday !</p>
+      <p> 多吃饭，少吃泡面，多睡觉，运动运动，多开心 ~
+        <p> 一直当优雅虾米
        </p>
       </center>
 <p class="signed">With Best Wishes 
-    <br> Smile Gupta
+    <br> 来自想一直当小福星的zzy
   </p>
   
 </div>
