--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>生日快乐小小虾米</title>
+<title>生日快乐 小小虾米！</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.5.0/balloon.min.css">
@@ -27,7 +27,7 @@
 <div class="wrap wishesFont">
     <center>
       <p>Wishing you a very Happy Birthday !</p>
-      <p> 多吃饭，少吃泡面，多睡觉，运动运动，多开心 ~
+      <p> 多吃饭，少吃泡面，多睡觉，坚持运动，多开心 ~
         <p> 一直当优雅虾米
        </p>
       </center>
