--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 <div id="card-inside">
 <div class="wrap wishesFont">
     <center>
-      <p>Wishing you a very Happy Birthday !</p>
-      <p> 多吃饭，少吃泡面，多睡觉，坚持运动，多开心 ~
-        <p> 一直当优雅虾米
+      <p>生日快乐,小小虾米! Wishing you a very happy birthday! </p>
+      <p> 要多吃饭，少吃泡面，多睡觉，坚持运动，多开心 ~
+        <p> 一直当优雅虾米 ~ 
        </p>
       </center>
 <p class="signed">With Best Wishes 
-    <br> 来自想一直当小福星的zzy
+    <br> 来自想一直当小福星的某不知名网友
   </p>
   
 </div>
