--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
        </p>
       </center>
 <p class="signed">With Best Wishes 
-    <br> 来自想一直当小福星的某不知名网友
+    <br> 来自想一直当小福星的不知名网友
   </p>
   
 </div>
